--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -21,6 +21,7 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "no-use-before-define": "off",
+    "react/prop-types": "off",
     "no-underscore-dangle": ["error", { "allowAfterThis": true }],
     "max-len": ["error", { "code": 200 }],
     "react/jsx-filename-extension": [
