--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -22,6 +22,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "no-use-before-define": "off",
     "react/prop-types": "off",
+    "arrow-body-style": "off",
     "no-underscore-dangle": ["error", { "allowAfterThis": true }],
     "max-len": ["error", { "code": 200 }],
     "react/jsx-filename-extension": [
