--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
+    "ace-builds": "^1.4.12",
     "axios": "^0.21.1",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
     "react-redux": "^7.2.2",
