--- a/api/package.json
+++ b/api/package.json
@@ -24,12 +24,14 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/pg": "^7.14.9",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.13"
+    "mongoose": "^5.11.13",
+    "pg": "^8.5.1"
   }
 }
