--- a/api/package.json
+++ b/api/package.json
@@ -17,8 +17,8 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
@@ -31,7 +31,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.13",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "uuid": "^8.3.2"
   }
 }
