refact structure & styles

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -45,7 +45,11 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {}
+      "typescript": {},
+      "alias": {
+        "map": [["~", "./src/"]],
+        "extensions": [".ts", ".js", ".tsx"]
+      }
     }
   }
 }
